@@ -1,6 +1,7 @@
 Revision history for Datahub-Factory
 
 {{$NEXT}}
+        - Added AdlibOAI
 
 0.9  2017-03-27 11:15:53 UTC
         - Added a configurable logger
